BUG 7920 自营平台包含多个商家商品订单，订单详情页的样式错误

--- a/weapp/static_v2/css/mall_order.css
+++ b/weapp/static_v2/css/mall_order.css
@@ -1035,6 +1035,12 @@
 }
 .xui-orderDetialPage .xui-producttab .xui-td-third {
     border-right: #ccc solid 1px;
+    min-width: 75px;
+}
+.xui-orderDetialPage .xui-producttab th.xui-td-third,
+.xui-orderDetialPage .xui-producttab th.xui-td-fourth,
+.xui-orderDetialPage .xui-producttab th.xui-td-fifth{
+    border-right: none;
 }
 .xui-orderDetialPage .xui-producttab .xui-td-fourth {
     width: 16%;
