--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -2,7 +2,22 @@
 
 {% load workbench_filter %}
 {% load apps_filter %}
-
+{% block css %}
+    <style>
+/*        .xui-propertyView-app-GroupDynamicGroup .xui-propertyView-app-Group-i-type {
+            width: 133px;
+            float: left;
+        }
+        .xui-propertyView-app-GroupDynamicGroup .xui-propertyView-app-Group-i-days {
+            width: 160px;
+            float: left;
+        }
+        .xui-propertyView-app-GroupDynamicGroup .xui-propertyView-app-Group-i-price {
+            width: 160px;
+            float: left;
+        }*/
+    </style>
+{% endblock %}
 {% block content-panel %}
 <div id="workbench" class="xui-wepage-workbenchPage clearfix pr xui-appPage-commonStyle">
     <div class="relative">
