--- a/weapp/member/templates/member/editor/member_qrcode.html
+++ b/weapp/member/templates/member/editor/member_qrcode.html
@@ -3,6 +3,18 @@
 {% load account_filter %}
 
 {% block css %}
+    <style>
+        .xui-chance span{
+            font-weight: 700;
+        }
+        #is_limited{
+            margin-left: 47px;
+        }
+        #limit_chance{
+            width: 100px;
+            height: 24px;
+        }
+    </style>
 {% endblock %}
 
 {% block content-panel %}
@@ -54,6 +66,10 @@
 					{% endif %} placeholder="请输入积分数值">
 					<span class="errorHint"></span>
 				</fieldset>
+                <fieldset class="xui-chance">
+                    <input type="checkbox" name="is_limited" id="is_limited" {% if member_qrcode_settings.is_limited %}checked{% endif %}>
+                    <span>每日限制奖励次数：<span class="xa-need_hide {% if not member_qrcode_settings.is_limited %}hidden{% endif %}"><input type="number" name="limit_chance" id="limit_chance" min="0" value="{% if member_qrcode_settings.is_limited %}{{ member_qrcode_settings.limit_chance }}{% endif %}">&nbsp;&nbsp;次</span></span>
+                </fieldset>
 				<fieldset class="xui-info">
 					<label for="" class="star_show">页面描述：</label>
 					<div style="padding-left:125px;">
@@ -81,6 +97,14 @@
 {% block js %}
 <script type="text/javascript">
 $(document).ready(function() {
+    $('#is_limited').on('click', function(){
+        var $this = $(this);
+        if ($this.attr('checked')){
+            $('.xa-need_hide').removeClass('hidden');
+        }else{
+            $('.xa-need_hide').addClass('hidden');
+        }
+    });
     $('body').delegate('[name="prize_source|0"]', 'change', function(){
         var count = $(':selected', this).data('count');
         if(count || count == 0){
