--- a/weapp/market_tools/tools/member_qrcode/templates/member_qrcode/webapp/member_qrcode.html
+++ b/weapp/market_tools/tools/member_qrcode/templates/member_qrcode/webapp/member_qrcode.html
@@ -23,10 +23,14 @@
         border-radius:2px;
         border:1px solid #dfdfdf;
     }
+    .xui-chance{
+        text-align: center;
+    }
     .xui-chance b{
         color: red;
     }
     .xui-chance span{
+        margin: 0 20px;
         color: grey;
     }
 </style>
